December Event & Form Update

--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                             <img src="img/shape/shape_3.svg" alt="">
                         </div>
                         <div class="thumb_inner  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                            <img src="img/about/event_3.PNG" alt="">
+                            <img src="img/about/event_4.png" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-6">
                     <div class="about_info pl-68">
-                        <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Yoga & Sound Healing Bath at Manhattan Beach</h4>
-                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">This beachfront healing session was developed to unite each participant with the Divinity while being immersed in the transformative nature.</p>
+                        <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Yoga & Sound Healing Bath at Florence Fresh</h4>
+                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><b><span style="color:#ffff";>Saturday, December 3rd 2022</span><b> <br><br> A mindful and calming healing yoga session followed by a high vibrational sound bath.</p>
                         <a href="https://www.eventbrite.com/e/beach-yoga-and-sound-bath-tickets-439224080047?aff=erelexpmlt" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Buy Tickets</a>
                     </div>
                 </div>
@@ -129,6 +129,39 @@
         </div>
     </div>
     <!-- about_area_end  -->
+
+<!-- about_area_start  -->
+<div class="about_area black_bg">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="section_title text-center mb-80">
+                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >Past Events</h3>
+                    <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" ></p>
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-lg-7 col-md-6">
+                <div class="about_thumb">
+                    <div class="shap_3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">
+                        <img src="img/shape/shape_3.svg" alt="">
+                    </div>
+                    <div class="thumb_inner  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                        <img src="img/about/event_3.PNG" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5 col-md-6">
+                <div class="about_info pl-68">
+                    <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Yoga & Sound Healing Bath at Manhattan Beach</h4>
+                    <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">Saturday, November 5th 2022</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- about_area_end  -->
 
 <!-- about_area_start  -->
 <div class="about_area black_bg">
@@ -205,11 +238,11 @@
                         <div class="container">
                             <h1>Subscribe to our email list</h1>
                             <p>Join our email list for exclusive offers and the latest news.</p><br>
-                            <form target="_blank" action="https://formsubmit.co/free.vibrationsss@gmail.com" method="POST">
+                            <form target="_blank" action="https://formsubmit.co/free.vibrationsss@gmail.com" action="https://formsubmit.co/illumiyoga@gmail.com"  method="POST">
                               <div class="form-group">
                                 <div class="form-row">
                                   <div class="col">
-                                    <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+                                    <input type="text" name="email" class="form-control" placeholder="Full Name" required>
                                   </div>
                                   <div class="col">
                                     <input type="email" name="email" class="form-control" placeholder="Email Address" required>
@@ -217,7 +250,7 @@
                                 </div>
                               </div>
                               <div class="form-group">
-                                <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+                                <textarea placeholder="Your Message" class="form-control" name="email" rows="10" required></textarea>
                               </div>
                               <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
                             </form>
