--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <div class="container">
                             <h1>Subscribe to our email list</h1>
                             <p>Join our email list for exclusive offers and the latest news.</p><br>
-                            <form target="_blank" action="https://formsubmit.co/free.vibrationsss@gmail.com" action="https://formsubmit.co/illumiyoga@gmail.com"  method="POST">
+                            <form target="_blank" action="https://formsubmit.co/free.vibrationsss@gmail.com" method="POST">
                               <div class="form-group">
                                 <div class="form-row">
                                   <div class="col">
