Social Media Icons

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </div>
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Welcome To</span>
                             <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">Yoga & Sound Bath Events</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s"> By Illumi Yoga & Free Vibrationsss</p>
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s"> By @IllumiYoga <a href="https://www.instagram.com/wattsjonice/?hl=en"><img src="img/social_media/instagram.png" style="width:45px;"></a><br> @Free.Vibrationsss<a href="https://www.instagram.com/free.vibrationsss/?hl=en"><img src="img/social_media/instagram.png" style="width:45px;"></a></p>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,6 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="section_title text-center mb-80">
-                    <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >Past Events</h3>
                     <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" ></p>
                 </div>
             </div>
@@ -228,6 +227,10 @@
     </div>
 </div>
 <!-- about_area_end  -->
+
+<!--social icons start
+<div class=""social-media"><img width=150px src="img/social_media/instagram.png"> @free.vibrationsss</div><img width=150px src="img/social_media/instagram.png"> @wattsjonice</div>
+ socialicons end-->
 
     <!-- footer_start  -->
     <footer class="footer">
