Updated Event Link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="buy_tkt">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://www.eventbrite.com/e/beach-yoga-and-sound-bath-tickets-439224080047?aff=erelexpmlt">Buy Tickets</a>
+                                        <a href="https://www.eventbrite.com/e/ancient-egyptian-yoga-and-sound-bath-tickets-469758057997">Buy Tickets</a>
                                     </div>
                                 </div>
                             </div>
@@ -122,7 +122,7 @@
                     <div class="about_info pl-68">
                         <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Yoga & Sound Healing Bath at Florence Fresh</h4>
                         <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><b><span style="color:#ffff";>Saturday, December 3rd 2022</span><b> <br><br> A mindful and calming healing yoga session followed by a high vibrational sound bath.</p>
-                        <a href="https://www.eventbrite.com/e/beach-yoga-and-sound-bath-tickets-439224080047?aff=erelexpmlt" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Buy Tickets</a>
+                        <a href="https://www.eventbrite.com/e/ancient-egyptian-yoga-and-sound-bath-tickets-469758057997" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Buy Tickets</a>
                     </div>
                 </div>
             </div>
